--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <h1>Pizza!</h1>
     <p>My Favorite Toppings: </p>
     <ul>
-      <li>Pepperoni</li>
-      <li>Mozzarella Cheese</li>
-      <li>Mushrooms</li>
+      <li>Vegan Pepperoni</li>
+      <li>Vegan Mozzarella Cheese</li>
+      <li>Vegan Mushrooms</li>
     </ul>
   </div>
 </div>
