--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="pizza.jpg" alt="Vegan Pizza with pepperoni and cheese." /> 
+    <img src="/pizza.jpg" alt="Vegan Pizza with pepperoni and cheese." /> 
   </div>
   <div class="textContainer">
     <h1>Pizza!</h1>
